# Thesis-Energy-Auction

./: .gitignore
ets_marl ppo/: README.md  install.bat  main.py  pyproject.toml  requirements.txt  setup.sh
ets_marl ppo/configs/: default.yaml
ets_marl ppo/configs/scenarios/: baseline_2024.yaml
ets_marl ppo/docs/: design.md
ets_marl ppo/notebooks/: ets_marl_colab.ipynb  ets_marl_colab_IPPO.ipynb  ets_marl_colab_P2.ipynb  ets_marl_colab_P3.ipynb  ets_marl_colab_PPO.ipynb
ets_marl ppo/results/: training_log_s42.csv
ets_marl ppo/results/checkpoints_s42/: agent_0_best.pt  agent_0_ep0.pt  agent_0_ep1000.pt  agent_0_ep1500.pt  agent_0_ep2000.pt  agent_0_ep2500.pt  agent_0_ep3000.pt  agent_0_ep3500.pt  agent_0_ep4000.pt  agent_0_ep4500.pt  agent_0_ep500.pt  agent_0_ep5000.pt  agent_0_ep5500.pt  agent_0_ep6000.pt  agent_0_ep6500.pt  agent_0_ep7000.pt  agent_0_ep7500.pt  agent_0_ep8000.pt  agent_0_ep8500.pt  agent_0_ep9000.pt  agent_0_ep9500.pt  agent_1_best.pt  agent_1_ep0.pt  agent_1_ep1000.pt  agent_1_ep1500.pt  agent_1_ep2000.pt  agent_1_ep2500.pt  agent_1_ep3000.pt  agent_1_ep3500.pt  agent_1_ep4000.pt  agent_1_ep4500.pt  agent_1_ep500.pt  agent_1_ep5000.pt  agent_1_ep5500.pt  agent_1_ep6000.pt  agent_1_ep6500.pt  agent_1_ep7000.pt  agent_1_ep7500.pt  agent_1_ep8000.pt  agent_1_ep8500.pt  (+66 more)
ets_marl ppo/scripts/: evaluate.py  train.py
ets_marl ppo/src/agents/: actor_critic.py  heuristic_policy.py  ppo_agent.py
ets_marl ppo/src/environment/: cap_schedule.py  (+4 more)
ets_marl ppo/tests/: test_cap_schedule.py  test_environment.py  test_mappo.py  test_market_clearing.py
(+46 files in other folders)
