[project]
name = "ets-marl"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "gymnasium>=1.2.3",
    "matplotlib>=3.10.8",
    "numpy==1.26.4",
    "numpy-groupies>=0.11.3",
    "pandas==2.2.3",
    "pytest>=9.0.2",
    "pyyaml>=6.0.3",
    "seaborn>=0.13.2",
    "torch==2.2.2",
]
